[package]
name = "ppoid-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10" }
actix-rt = "2.7.0"
actix-cors = "0.6.4"
actix-web = {version = "4.2.1", features = ["openssl"]}
serde = {version = "1.0.106", features = ["derive"]}
serde_json = {version = "1.0.51"}
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.2.1", features = ["serde", "v4"] }
env_logger ="0.9.1"

aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
aws-sdk-dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
tokio-stream = "0.1.8"